# harald

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README  README.md
demo/: main.rs
examples/: main.rs
libs/cloud/: Cargo.toml
libs/cloud/src/: error.rs  lib.rs
libs/kawaii/: Cargo.toml
libs/kawaii/src/: example.rs  lib.rs
libs/server/: .env  Cargo.toml
libs/server/src/: api.rs  lib.rs  models.rs
src/: bst.rs  lib.rs  mock.rs  service.rs  state.rs  uuid.rs
src/att/: attribute.rs  mod.rs  packet.rs  response.rs  server.rs
src/attribute/: characteristic.rs  mod.rs  properties.rs  service.rs
src/central/: manager.rs  mod.rs  peer.rs
src/controller/: command.rs  data.rs  hci.rs  identifiers.rs  link_connection.rs  mod.rs  packet.rs  response.rs  result.rs  stream.rs  stub.rs
src/gap/: broadcast.rs
src/gatt/: characteristic.rs  descriptor.rs  mod.rs  service.rs
src/hci/: mod.rs
src/macosx/: bluetooth_osx.h  bluetooth_osx.m  scan.rs
src/peripheral/: manager.rs  peer.rs
src/profile/: mod.rs
tests/: bluetooth.rs
