[package]
name = "bluetooth"
version = "0.0.1"
description = "A lightweight library for Bluetooth"
readme = "README.md"
repository = "https://github.com/pyroar/bluetooth"
license = "MIT"
authors = ["Richard Protasov <richard.shlyakhov15@ncf.edu>"]
keywords = ["bluetooth"]

[dependencies]
mio = "0.4"
bytes = "0.2.11"
