[package]
name = "harald"
version = "0.0.1"
description = "A lightweight library for Bluetooth"
readme = "README.md"
repository = "https://github.com/pyroar/bluetooth"
license = "MIT"
authors = ["Richard Protasov <richard.shlyakhov15@ncf.edu>"]
keywords = ["bluetooth"]

[dependencies.bytes]
git = "https://github.com/carllerche/bytes"
